backend/crates/golish/tests/snapshots/ai_events_characterization__tool_response_truncated_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 319
expression: json
---
{
  "original_tokens": 50000,
  "tool_name": "read_file",
  "truncated_tokens": 10000,
  "type": "tool_response_truncated"
}
