backend/crates/golish/tests/snapshots/ai_events_characterization__tool_result_failure_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 178
expression: json
---
{
  "request_id": "req-result-2",
  "result": {
    "error": "Permission denied"
  },
  "source": {
    "type": "main"
  },
  "success": false,
  "tool_name": "write_file",
  "type": "tool_result"
}
