backend/crates/golish/tests/snapshots/ai_events_characterization__tool_result_success_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 164
expression: json
---
{
  "request_id": "req-result-1",
  "result": {
    "content": "file contents here"
  },
  "source": {
    "type": "main"
  },
  "success": true,
  "tool_name": "read_file",
  "type": "tool_result"
}
