backend/crates/golish/tests/snapshots/ai_events_characterization__tool_source_main_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
expression: json
---
{
  "type": "main"
}
