backend/crates/golish/tests/snapshots/ai_events_characterization__tool_source_sub_agent_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 529
expression: json
---
{
  "agent_id": "agent-001",
  "agent_name": "analyzer",
  "type": "sub_agent"
}
