backend/crates/golish/tests/snapshots/ai_events_characterization__workflow_error_with_step_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 432
expression: json
---
{
  "error": "Git commit failed",
  "step_name": "commit",
  "type": "workflow_error",
  "workflow_id": "wf-001"
}
