backend/crates/golish/tests/snapshots/ai_events_characterization__workflow_error_without_step_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 444
expression: json
---
{
  "error": "Workflow initialization failed",
  "step_name": null,
  "type": "workflow_error",
  "workflow_id": "wf-001"
}
