backend/crates/golish/tests/snapshots/ai_events_characterization__workflow_started_serialization.snap
---
source: crates/golish/tests/ai_events_characterization.rs
assertion_line: 369
expression: json
---
{
  "session_id": "session-123",
  "type": "workflow_started",
  "workflow_id": "wf-001",
  "workflow_name": "git_commit"
}
